--- a/style.css
+++ b/style.css
@@ -1,41 +1,106 @@
-* {
-    margin: 0 0 0 0em;
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+/* css reset nog ff opzoeken voor box-sizing*/
 
 @font-face {
     font-family: Neue;
-    src: url(/font/Helvetica\ Neue\ UltraLight.ttf);
+    src: url(/font/NimbusSansNovusT-UltraLight.ttf);
 }
+
+@font-face {
+    font-family: NeueM;
+    src: url(/font/HelveticaNeue\ Light.ttf);
+}
+
 
 @font-face {
     font-family: narrow;
     src: url(/font/GothamNarrow-Light.otf);
 }
 
+:root {
+    --buttonc: #333;
+}
+
+/****ALGEMEEN***/
+
+/* background-color:var(--bg) */
+
+
 p {
     font-family: narrow;
     line-height: 1.9;
 }
 
+h1 {
+    position: absolute;
+    left: -999em;
+}
+
+/* h3 {
+    text-transform: uppercase;
+    margin: 3em;
+    font-family: Neue;
+    letter-spacing: 0.2em;
+ */
+
+
+hr {
+    height: 0.1px;
+    width: 4em;
+    background-color: black;
+    margin: 2em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button {
+    background-color: none;
+    font-family: Neuem;
+    font-weight: 900;
+    letter-spacing: 0.2em;
+    background-color: white;
+    border: none;
+    text-decoration: none;
+
+}
+
+button:hover {
+    cursor: pointer;
+
+}
+
+button:focus {
+    outline: none;
+    background-color: blue;
+}
+
+/****Header***/
+
+
 header {
-    background-color: black;
+    position: absolute;
 }
 
-ul:nth-child(1) {
-    display: flex;
-    flex-direction: row;
-    background-color: black;
-    color: white;
-    list-style: none;
+header object {
+    width: 10%;
+    fill: #fff;
 }
 
-nav.toonMenu {
+
+/* Side menu */
+header section.toonMenu {
     transform: translateX(0);
 }
 
-nav {
+header section {
     padding: 1.25em;
-    background-image: var(--menu-gradient);
     position: fixed;
     left: 0;
     right: 0;
@@ -43,86 +108,304 @@ nav {
     transform: translateX(-100%);
 }
 
-
-header img {
-    width: 30%;
-    height: auto;
+header div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 93%;
+    margin: 0 auto;
 }
 
 
+/* Code van sprec.com gebruikt */
+header ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+
+header nav a {
+    font-family: Neue;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: 0.2em;
+    font-size: 2em;
+    color: #323232;
+    text-decoration: none;
+    line-height: inherit;
+}
+
+header nav li {
+    display: block;
+    padding: 0.3em;
+    text-align: left;
+
+}
+
+header section {
+    z-index: 100;
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    align-items: flex-start;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+}
+
+
+/****Section 1***/
 section:nth-of-type(1) img {
     height: auto;
     width: 100%;
+    margin-top: -15%;
 }
 
 
+/* fix met flex */
 
-section:nth-of-type(1) {
+
+main section:nth-of-type(1) {
     display: flex;
     color: white;
     height: auto;
-    position: relative;
 }
 
-section:nth-of-type(1) h3 {
+main section:nth-of-type(1) h2 {
     position: absolute;
     text-align: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: xx-large;
-    font-weight: 200;
+    font-size: 150%;
+    font-family: NeueM;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
 }
 
 
-section:nth-of-type(2) {
+/****Section 2***/
+
+main section:nth-of-type(2) {
     background-color: white;
     text-align: center;
     padding: 10%;
 }
 
-hr {
-    height: 0.1px;
-    width: 4em;
-    background-color: black;
-    display: flex;
-    margin: 30px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-section:nth-of-type(3) ul {
-    padding: 0;
-}
-
-
-section:nth-of-type(3) li {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-
-}
-
-section:nth-of-type(3) li:nth-child(1) {
-    background-image: url(https://sprec.com/wp-content/uploads/2019/05/parcelf_rendering_exterior_aerialtowardsdowntown_hresgif-1400x875.jpg);
-    width: 100%;
-    Height: 400px;
-}
-
-h3 {
+main section:nth-of-type(2) h2 {
     text-transform: uppercase;
-    margin: 30px;
+    margin: 2em;
     font-family: Neue;
     letter-spacing: 0.2em;
 }
 
-section:nth-of-type(4) {
-    background-color: rgba(0, 0, 0, 0.8);
-    padding: 1em;
+
+
+/****Section 3***/
+
+
+
+main section:nth-of-type(3) h2 {
+    position: absolute;
+    left: -999em;
 }
 
-section:nth-of-type(4) h4 {
+main section:nth-of-type(3) h3 {
+    text-transform: uppercase;
+    margin: 1em;
+    font-family: Neue;
+    font-size: xx-large;
+    letter-spacing: 0.2em;
+}
+
+
+main section:nth-of-type(3) li:nth-child(1) {
+    background-image: url(https://sprec.com/wp-content/uploads/2019/05/parcelf_rendering_exterior_aerialtowardsdowntown_hresgif-1400x875.jpg);
+    height: 22em;
+    background-position: 50%;
+
+    background-size: cover;
+    opacity: 0.9;
+}
+
+main section:nth-of-type(3) p {
+    text-transform: uppercase;
+    font-family: Neue;
+    font-size: larger;
+    font-weight: 900;
+}
+
+main section:nth-of-type(3) li a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #1118;
+    text-decoration: none;
+    color: white;
+
+}
+
+main section:nth-of-type(3) li a p {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+
+}
+
+main section:nth-of-type(3) li a p::before {
+    content: "";
+    width: 3em;
+    height: 0.1em;
+    background-color: white;
+
+}
+
+
+main section:nth-of-type(3) li:nth-child(2) {
+    background-image: url(Images/First\ light.jpg);
+    height: 22em;
+    background-position: 50%;
+    background-size: cover;
+    opacity: 0.9;
+}
+
+main section:nth-of-type(3) li:nth-child(3) {
+    background-image: url(https://sprec.com/wp-content/uploads/2018/11/WK002_0017210_VIEW-04-EXTERIOR-WALL-CENTRE-HOVER-171020-FINAL-1400x664.jpg);
+    height: 22em;
+    background-position: 50%;
+    background-size: cover;
+    opacity: 0.9;
+}
+
+main section:nth-of-type(3) li:nth-child(4) {
+    background-image: url(https://sprec.com/wp-content/uploads/2016/07/PG_project-banner-images-1400x875.jpg);
+    height: 22em;
+    background-position: 50%;
+    background-size: cover;
+    opacity: 0.9;
+}
+
+
+
+/****Section 4***/
+
+
+main section:nth-of-type(4) {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1.3em;
+    display: flex;
+    justify-content: center;
+
+}
+
+main section:nth-of-type(4) a {
+    text-transform: uppercase;
+    font-family: Neue;
+    font-size: large;
+    letter-spacing: 0.2em;
+    color: white;
+    font-weight: 600;
+    text-decoration: 0;
+
+}
+
+
+/****Section 5***/
+
+main section:nth-of-type(5) {
+    background-color: white;
+    text-align: center;
+    padding: 10%;
+}
+
+main section:nth-of-type(5) h2 {
+    text-transform: uppercase;
+    margin-bottom: 2em;
+    font-family: Neue;
+    letter-spacing: 0.2em;
+}
+
+
+/****Section 6***/
+main section:nth-of-type(6) {
+    color: white;
+    height: auto;
+    justify-content: center;
+    position: relative;
+}
+
+
+
+main section:nth-of-type(6) p {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 280%;
+    font-family: Neue;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+
+}
+
+
+main section:nth-of-type(6) img {
+    width: 100%;
+    filter: brightness(70%);
+
+
+
+}
+
+main section:nth-of-type(6) p:nth-child(2) {}
+
+
+
+
+
+/****Section 7***/
+
+
+main section:nth-of-type(7) {
+    background-color: white;
+    text-align: center;
+    padding: 10%;
+}
+
+main section:nth-of-type(7) h2 {
+    text-transform: uppercase;
+    margin: 30px;
+    font-family: Neue;
+    letter-spacing: 0.2em;
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+
+/****Section 8***/
+
+main section:nth-of-type(8) {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1em;
+    display: flex;
+    justify-content: flex-start;
+
+}
+
+main section:nth-of-type(8) a {
     text-transform: uppercase;
     margin: 30px;
     font-family: Neue;
@@ -130,10 +413,82 @@ section:nth-of-type(4) h4 {
     color: white;
     text-align: center;
     font-weight: 2000;
+    text-decoration: 0;
 }
 
-section:nth-of-type(5) {
-    background-color: white;
+
+
+/****FOOTER***/
+
+
+footer {
+    background-color: #111;
+    position: relative;
+    background-color: #111;
+    padding: 3em 0 2em;
+    color: #fff;
     text-align: center;
-    padding: 10%;
+}
+
+footer h3 {
+    font-family: Neuem;
+    color: white;
+    text-align: center;
+    font-weight: 800;
+    font-size: 1em;
+}
+
+
+footer nav ul {
+
+    display: flex;
+    flex-direction: row;
+    left: 50%;
+    right: 50%;
+    margin-bottom: 40px;
+    justify-content: space-evenly;
+}
+
+
+footer nav li {
+    text-decoration: 0;
+    list-style-type: none;
+
+}
+
+footer nav a {
+    font-family: Neuem;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: 0.2em;
+    font-size: 0.8em;
+    color: white;
+    text-decoration: none;
+    line-height: inherit;
+}
+
+
+footer section {
+    padding: 5em;
+}
+
+footer svg {
+
+    fill: #bbb;
+    width: 15%;
+}
+
+footer address {
+
+    margin-top: 2em;
+    margin-bottom: 0.5em;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: narrow;
+    text-decoration: none;
+    font-size: 1em;
+}
+
+
+footer p:last-child {
+    color: rgba(255, 255, 255, 0.3);
 }
