--- a/style2.css
+++ b/style2.css
@@ -1,12 +1,3 @@
-/* wat nog doen:  */
-/* header javascript code herhalen?? */
-/* Header button mooi maken */
-/* Button states */
-/* tweede pagina */
-
-
-
-
 *,
 *::after,
 *::before {
@@ -51,6 +42,7 @@
     --whiteline: white;
     --sectionwhiteback: #f8f6f7;
 
+
 }
 
 /****ALGEMEEN***/
@@ -67,23 +59,19 @@ h1 {
 }
 
 
-/* button styles */
-
 button {
-    margin-top: 2em;
     background-color: Transparent;
-    color: var(--blackline);
+    color: white;
     padding-left: 2em;
     padding-right: 2em;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     font-family: NeueB;
     font-weight: 400;
-    border: 1px solid var(--blackline);
+    border: 1px solid var(--whiteline);
     text-transform: uppercase;
     letter-spacing: 0.2em;
 }
-
 
 
 a:hover {
@@ -95,7 +83,7 @@ a:hover {
 
 button:hover {
     cursor: pointer;
-    border-color: #333;
+    border: 2px solid var(--whiteline);
 
 }
 
@@ -293,92 +281,69 @@ header section:nth-of-type(2) svg {
 
 }
 
-
-
-
-/****Section 1***/
-main section:nth-of-type(1) img {
-    height: 50em;
-    width: 100%;
-
-}
-
-
 main section:nth-of-type(1) {
-    margin-top: -15;
-    display: flex;
     position: relative;
-    color: var(--sectionwhiteback);
-    height: auto;
+    min-height: 70vh;
+    width: 100%;
+    margin: 0 auto;
+    z-index: 50;
+    background-color: black;
 }
 
-main section:nth-of-type(1) h2 {
+main section:nth-of-type(1) figure {
+    background: url(images/parcelf.jpg);
+    height: 15em;
+    background-position: 20%;
     position: absolute;
-    text-align: center;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: clamp(1.5em, 6vw, 2.5em);
-    font-family: Neue;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-}
+    height: 100%;
+    width: 100%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 0;
+    opacity: 0.7;
 
-main section:nth-of-type(1) p {
-    position: absolute;
-    text-align: center;
-    color: var(--whiteText);
-    top: 85%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: clamp(0.3em, 6vw, 0.9em);
-    font-family: Neueb;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
 }
 
 
-main section:nth-of-type(1) a {
-    text-decoration: 0;
-}
-
-main section:nth-of-type(1) p::before {
-    content: "";
-    height: 1px;
-    width: 3em;
-    background-color: var(--backgroundWhite);
-    position: absolute;
-    top: 50%;
-    right: 100%;
-    transform: translateX(-50%);
-}
-
-
-
-/****Section 2***/
 
 main section:nth-of-type(2) {
     background-color: var(--backgroundWhite);
     text-align: center;
-    padding: 10%;
+    padding-top: 4%;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 4%;
+    max-width: 55em;
+    margin-left: auto;
+    margin-right: auto;
 
 
 }
 
 main section:nth-of-type(2) h2 {
     text-transform: uppercase;
-    margin-bottom: 2em;
-    font-family: Neue;
-    font-size: xx-large;
-    letter-spacing: 0.2em;
+    font-family: NeueM;
+    font-size: 2.5em;
+    letter-spacing: 0.3em;
     font-weight: 200;
     position: relative;
     padding: 1em;
 }
 
-main section:nth-of-type(2) h2::after {
+main section:nth-of-type(2) h3 {
+    text-transform: uppercase;
+    margin-bottom: 1em;
+    font-family: NeueM;
+    font-size: xx-large;
+    letter-spacing: 0.3em;
+    font-weight: 200;
+    position: relative;
+    padding: 1em;
+}
+
+
+main section:nth-of-type(2) h2:nth-child(1):after {
     content: "";
     height: 1px;
     width: 3em;
@@ -389,60 +354,51 @@ main section:nth-of-type(2) h2::after {
     transform: translateX(-50%);
 }
 
-/****Section 3***/
-/* Porfolios */
-
-main section:nth-of-type(3) ul {
-    width: 100%;
-    flex-direction: column;
+main section:nth-of-type(2) p {
+    text-align: left;
+    padding-bottom: 2em;
 }
 
+
+
+
+/*  */
+/* SECTION 3 */
+/*  */
+
+
 @media (min-width:60em) {
-    ul {
+    main section:nth-of-type(3) {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
 }
 
-main section:nth-of-type(3) h2 {
-    position: absolute;
-    left: -999em;
-}
 
-main section:nth-of-type(3) h3 {
-    text-transform: uppercase;
-    margin: 1em;
-    font-family: Neue;
-    font-size: xx-large;
-    letter-spacing: 0.2em;
+
+main section:nth-of-type(3) img {
+    max-width: 100%;
+    height: auto;
 }
 
 
-main section:nth-of-type(3) li:nth-child(1) {
-    background-image: url(https://sprec.com/wp-content/uploads/2019/05/parcelf_rendering_exterior_aerialtowardsdowntown_hresgif-1400x875.jpg);
-    height: 22em;
+
+
+main section:nth-of-type(4) {
+    position: relative;
+
+}
+
+
+main section:nth-of-type(4) figure {
+    background-image: url(Images/First\ light.jpg);
     background-position: 50%;
-
     background-size: cover;
+    height: 55vh;
     opacity: 0.9;
 }
 
-
-main section:nth-of-type(3) p {
-    text-transform: uppercase;
-    font-family: Neue;
-    font-size: larger;
-    font-weight: 900;
-}
-
-
-main section:nth-of-type(3) li {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-}
-
-main section:nth-of-type(3) li a {
+main section:nth-of-type(4) a {
     flex: 50%;
     display: flex;
     flex-direction: column;
@@ -453,237 +409,28 @@ main section:nth-of-type(3) li a {
     background-color: var(--overlayShadow);
     text-decoration: none;
     color: var(--backgroundWhite);
-
 }
 
-main section:nth-of-type(3) li a p {
-    display: flex;
-    align-items: center;
-    gap: 1em;
-
-}
-
-main section:nth-of-type(3) li a p::before {
-    content: "";
-    width: 3em;
-    height: 0.1em;
-    background-color: var(--whiteline);
-
-}
-
-
-main section:nth-of-type(3) li:nth-child(2) {
-    background-image: url(Images/First\ light.jpg);
-    height: 22em;
-    background-position: 50%;
-    background-size: cover;
-    opacity: 0.9;
-}
-
-main section:nth-of-type(3) li:nth-child(3) {
-    background-image: url(https://sprec.com/wp-content/uploads/2018/11/WK002_0017210_VIEW-04-EXTERIOR-WALL-CENTRE-HOVER-171020-FINAL-1400x664.jpg);
-    height: 22em;
-    background-position: 50%;
-    background-size: cover;
-    opacity: 0.9;
-}
-
-main section:nth-of-type(3) li:nth-child(4) {
-    background-image: url(https://sprec.com/wp-content/uploads/2016/07/PG_project-banner-images-1400x875.jpg);
-    height: 22em;
-    background-position: 50%;
-    background-size: cover;
-    opacity: 0.9;
-}
-
-
-
-/****Section 4***/
-/* See more projects */
-
-
-main section:nth-of-type(4) {
-    background-color: var(--semiblackbackground);
-    padding: 1.3em;
-    display: flex;
-    justify-content: center;
-
-}
-
-main section:nth-of-type(4) a {
+main section:nth-of-type(4) h3 {
     text-transform: uppercase;
+    margin: 1em;
     font-family: Neue;
     font-size: large;
-    letter-spacing: 0.2em;
-    color: var(--whiteText);
-    font-weight: 600;
-    text-decoration: 0;
-
+    letter-spacing: 0.3em;
 }
 
-
-/****Section 5***/
-/* Mondialite */
-
-main section:nth-of-type(5) {
-    background-color: var(--backgroundWhite);
-    text-align: center;
-    padding: 10%;
-}
-
-main section:nth-of-type(5) h2 {
+main section:nth-of-type(4) h2 {
     text-transform: uppercase;
-    margin-bottom: 2em;
+    margin: 1em;
     font-family: Neue;
-    letter-spacing: 0.2em;
-    position: relative;
-}
-
-main section:nth-of-type(5) h2::after {
-    content: "";
-    height: 2px;
-    width: 2em;
-    background-color: var(--blackline);
-    position: absolute;
-    top: 2em;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-
-/****Section 6***/
-/* Explore mondialite */
-main section:nth-of-type(6) {
-
-    position: relative;
-    color: var(--backgroundWhite);
-    height: auto;
-}
-
-
-
-
-main section:nth-of-type(6) p:nth-child(1) {
-    z-index: 1;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--whiteText);
-    font-size: 200%;
-    font-family: Neuem;
-    font-weight: 20;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-
-}
-
-
-main section:nth-of-type(6) p:nth-child(2) {
-    z-index: 1;
-    position: absolute;
-    text-align: center;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: var(--whiteText);
-    font-size: 120%;
-    font-family: Neuem;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 0.2em;
-
-}
-
-main section:nth-of-type(6) p:nth-child(2)::before {
-    content: "";
-    z-index: 1;
-    width: 3em;
-    height: 0.1em;
-    background-color: var(--whiteline);
-
-}
-
-
-main section:nth-of-type(6) img {
-    width: 100%;
-    height: 35em;
-    filter: brightness(70%);
-    object-fit: cover;
-
-}
-
-
-
-
-
-
-/****Section 7***/
-
-
-main section:nth-of-type(7) {
-    background-color: var(--backgroundWhite);
-    text-align: center;
-    padding: 10%;
-}
-
-main section:nth-of-type(7) h2 {
-    text-transform: uppercase;
-    margin: 30px;
-    font-family: Neue;
-    letter-spacing: 0.2em;
     font-size: xx-large;
-    font-weight: bolder;
-    position: relative;
-    padding-bottom: 1em;
+    letter-spacing: 0.3em;
 }
 
 
-main section:nth-of-type(7) h2::after {
-    content: "";
-    height: 1.5px;
-    width: 2em;
-    background-color: var(--blackline);
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/****Section 8***/
-
-main section:nth-of-type(8) {
-    background-color: var(--semiblackbackground);
-    padding: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-
-}
-
-
-
-main section:nth-of-type(8) a {
-    text-decoration: 0;
-}
-
-main section:nth-of-type(8) p {
-    text-transform: uppercase;
-    margin: 30px;
-    font-family: Neue;
-    letter-spacing: 0.2em;
-    color: var(--whiteText);
-    text-align: center;
-    font-weight: 2000;
-
-}
-
-
-
-/****FOOTER***/
-
+/*  */
+/* FOOTER */
+/*  */
 footer {
     background-color: var(--backgroundfooter);
     position: relative;
